Adding RNSB, RNP and RNS dependencies

--- a/package.json
+++ b/package.json
@@ -36,5 +36,18 @@
   "author": {
     "name": "Fabrizio Moscon"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "pods": {
+    "TwilioVoice": {
+      "pod": "TwilioVoice",
+      "version": "2.0.4"
+    }
+  },
+  "dependencies": {
+    "react-native-swift-bridge": "^2.4.1"
+  },
+  "peerDependencies": {
+    "react-native-pod": "^1.10.2",
+    "react-native-swift": "^1.2.1"
+  }
 }
